-- documentation, see http://haskell.org/cabal/users-guide/

name:                vinapu
version:             5.0 
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Rolf C Stadheim
maintainer:          rolf.c.stadheim@gmail.com
-- copyright:           
category:            Structural Engineering
build-type:          Simple
cabal-version:       >=1.8

executable vinapu-5.0
  main-is: Main.hs 
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base                 == 4.9.*
                       ,xml                 >= 1.3.13 && < 1.4
                       ,containers          >= 0.5.0.0 && < 0.6
                       ,postgresql-simple   >= 0.5.2.0 && < 0.6
                       ,utf8-string         >= 1.0.1 && < 1.1
                       ,cmdargs             >= 0.10.14 && < 0.11
                       ,HStringTemplate     >= 0.8.5 && < 0.9
                       ,hlint               >= 1.9.39
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-unused-do-bind
